--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "fausto-dj-landing",
   "version": "1.0.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+ "scripts": {
+  "dev": "next dev",
+  "build": "next run build",
+  "start": "next start"
+}
   },
   "dependencies": {
     "lucide-react": "^0.268.0",
